# akasuki

./: Cargo.toml  Config.toml  application.yml
migrations/: 20211009163836_initial_migration.sql
src/: config.rs  database.rs  global_data.rs  main.rs
src/commands/: boop.rs  checks.rs  mod.rs  ping.rs  role.rs
src/commands/music/: mod.rs  play.rs  queue.rs
src/database/: mod.rs  models.rs
src/events/: mod.rs  ready.rs
src/listeners/: mod.rs  ready.rs
src/utils/: mod.rs  roles.rs
