[package]
name = "akasuki"
version = "0.1.0"
edition = "2018"
authors = ["Forbidden-A Forbidden.BA@ProtonMail.com"]
description = "Cool discord bot written in rust, using serenity."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
dotenv = "0.15.0"
futures = "0.3.17"
rand = { version = "0.8.4", features = ["std", "getrandom"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.12.0", features = ["full"] }
toml = "0.5.8"
tracing = "0.1.29"
tracing-log = "0.1.2"
tracing-subscriber = "0.2.25"
tracing-futures = "0.2.5"
darkredis = "0.8.0"
poise = { git = "https://github.com/kangalioo/poise.git", rev = "48d65f6" }

[dependencies.uuid]
version = "0.8"
features = ["v4"]


[dependencies.clap]
version = "3.0.0-beta.4"
features = ["suggestions", "color", "wrap_help", "unicode_help"]

[dependencies.reqwest]
version = "0.11.5"
default-features = false
features = ["json", "multipart", "stream", "rustls-tls"]

[dependencies.lavalink-rs]
version = "0.9.0-rc.2"
features = ["rustls", "songbird", "serenity"]

[dependencies.songbird]
version = "0.2"
features = ["serenity-rustls", "gateway"]


[dependencies.serenity]
# version = "0.10.9"
# For poise..
git = "https://github.com/serenity-rs/serenity"
branch = "next"
default-features = false
features = [
    "cache",
    "client",
    "builder",
    "gateway",
    "voice",
    "http",
    "model",
    "utils",
    "rustls_backend",
    "collector",
    "unstable_discord_api",
]

[dependencies.sqlx]
version = "0.5.9"
features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "migrate",
    "chrono",
    "offline",
]

[patch.crates-io.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "next"
